OpenSLP Change Log (stable-1-0)
-------------------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

02/05/02 matt@caldera.com
Fixed bug where idle connections to DAs were not being aged.

02/05/02 matt@caldera.com
Added code so that 'slptool -v' will return the path of the slp.conf file
libslp.so is configured to use.

*** Tag OpenSLP-1.0.7 ***

01/25/02 matt@caldera.com
Fixed all documentation to reflect use of the new net.slp.multicastIF setting

01/24/02 matt@caldera.com
Changed all instances of close() where socket descriptors are closed
to closesocket() on WIN32

01/24/02 matt@caldera.com
Applied patch from Juergen Kreileder that provides the net.slp.multicastIF
slp.conf setting.  net.slp.multicastIF is useful in setting up OpenSLP on
multi-homed machines where it is desireable to configure which interface 
should send multicast traffic.

01/24/02 matt@caldera.com
Applied patch from Garth Bushell that fixes a problem where not enough
memory was being allocated to hold an escaped string in SLPEscape(). 

01/17/02 matt@caldera.com
Fixed some problems with multicast route handling code in the slpd 
startup script

12/20/01 matt@caldera.com
Moved Win2000 specific defines inside #ifdef WIN32

12/14/01 matt@caldera.com
Changed slpd "daemonize" code to chdir() to "/"

*** Tag OpenSLP-1.0.6 ***

12/04/01 matt@caldera.com
Applied patch from Tim Zurcher that sets FRESH flag for registrations.
OpenSLP ignores this flag, but other DA implementations like K&A SLP do not.

11/21/01 matt@caldera.com
Made a change to the outgoing socket send code that unlinks the sendbuf 
from the send list before it is sent.  This way if there is a reconnect